# DynamicSparseTraining

./: CLAUDE.md  JOURNEY.md  Makefile  Plan.md  README.md  Requirements.md  expeirments.md  phd-readiness-20wk.md  preregistration.md  pyproject.toml  readings.md  short-list.md  todo.md  unified.md
docs/: README.md
docs/applications/: README.md
docs/applications/cv/: cv.md
docs/applications/programs/: _example.md  tracker.md
docs/applications/research-statement/: TEMPLATE.md
docs/applications/sop/: TEMPLATE.md
docs/blog/: README.md  TEMPLATE.md
docs/blog/drafts/: why-keys-need-more-bits.md
docs/literature/: README.md  bibliography.bib
docs/literature/papers/: TEMPLATE.md  kivi.md  kv-transform-coding.md  kvquant.md  (+2 more)
docs/reports/: README.md  TEMPLATE.md
experiments/: 01_collect_stats.py  02_bound_vs_measured.py  03_allocation_compare.py  04_ablations.py  _common.py
experiments/configs/: llama32_1b.yaml  qwen25_1.5b.yaml
paper/: main.tex
paper/notes/: future_work.md  log.md
paper/sections/: experiments.tex  intro.tex  related.tex  theory.tex
research/: README.md
research/benchmarks/: README.md  RESULTS.md  protocol.md
research/reproductions/: README.md
results/: README.md
scripts/: plot_allocation_compare.py  plot_allocation_heatmap.py  plot_bound_vs_measured.py
src/kvbits/: __init__.py  allocation.py  bounds.py  patch.py  quantizers.py  stats.py
tests/: test_bound.py  test_quantizers.py
weeks/: TEMPLATE.md  week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md
(+6 files in other folders)
